# folha_pgto

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
folha_pgto/: app.py  ler_folha_pgto.py  ler_recibos.py  ler_tabela_funcionarios.py  utils.py  validador_nomes.py
