[project]
name = "folha-pgto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "langchain>=1.0.1",
    "langchain-groq>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "thefuzz>=0.22.1",
    "xlrd>=2.0.2",
]
